# mycelium

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  app.py  auth.py  auto_approve.py  backup.py  blacklist.py  catbox.py  catchup.py  cleanup.py  config.py  db.py  debrid.py  docker-compose.yml  health.py  health_cache.py  jellyfin.py  library_sync.py  lz_string.py  mdblist.py  monitor.py  mp4_faststart.py  nfo_generator.py  notify.py  plugin_loader.py  processor.py  realdebrid.py  releases.json  requirements.txt  retry_queue.py  settings.py  spore_server.py  stats.py  strm_generator.py  subtitles.py  (+10 more)
.github/: FUNDING.yml
.github/workflows/: release.yml
_webplayer/: db-additions.py
docs/: install-guide.html
frontend/: index.html
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: DetailModal.tsx  GenreBrowser.tsx  Layout.tsx  PersonModal.tsx  PluginSettingsCard.tsx  RowExpandModal.tsx
frontend/src/hooks/: usePlugins.ts
frontend/src/pages/: Admin.tsx  AdminTabs.tsx  AutoApprove.tsx  Blacklist.tsx  Discover.tsx  Library.tsx  Requests.tsx  Search.tsx  Settings.tsx  Wanted.tsx
plugins/trakt/: __init__.py  routes.py  trakt_api.py
plugins/webplayer/: routes.py  web_player.py
plugins/webplayer/frontend/: PlayerModal.tsx
scripts/: fill_missing_imdb.py  migrate_plex_media.py
spore/: plex_transcoder_wrapper.sh
spore-9p/: go.mod  main.go
spore-nfs/: Dockerfile  go.mod  go.sum  main.go
spore-smb/: Cargo.toml
spore-smb/src/: main.rs
static/app/: index.html
templates/: setup.html  ui.html
tests/: test_auto_approve.py  test_catbox_cache_sweep.py  test_mdblist.py  test_mp4_faststart.py  test_parser.py  test_settings_enum.py  test_strm_generator.py  test_tmdb_person.py  test_torbox_ratelimit.py  test_torrentio_rank.py  test_trakt.py  test_zilean_index.py
(+13 files in other folders)
