[package]
name = "spore-smb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spore-smb"
path = "src/main.rs"

[dependencies]
# Vendored + patched locally: upstream 0.4.0 doesn't publicly export
# BackendCapabilities/FileTimes/SmbError/SmbResult/SmbPath, which
# ShareBackend/Handle need in every method signature. See vendor/smb-server/src/lib.rs.
smb-server = { path = "vendor/smb-server", default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Not used directly by this binary (its own logging is eprintln!) -- pulled
# in solely so the vendored smb-server crate's own tracing::{debug,info,warn,
# error}! calls (connection lifecycle, dispatch errors, handler warnings)
# have a subscriber to write to. Without one installed, tracing's default
# dispatch silently drops every event from the vendored crate.
tracing-subscriber = "0.3"
